<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".ui.fragments.DetailsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_back_arrow"
            android:padding="20dp"
            android:id="@+id/backButton"
            android:clickable="true"
            android:focusable="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back" />

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/icon"
            android:contentDescription="@string/weather_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dateTxt"
            tools:text="Tuesday, 18 October"
            android:textSize="24sp"
            android:layout_below="@id/icon"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/temperatureTxt"
            tools:text="27°"
            android:textSize="68sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/dateTxt"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/hotColdTxt"
            tools:text="Hot"
            android:visibility="gone"
            tools:visibility="visible"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@id/temperatureTxt"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/maxMinTxt"
            tools:text="Max:30° Min:21°"
            android:textSize="18sp"
            android:layout_below="@id/hotColdTxt"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/descriptionTxt"
            tools:text="Moderate rain"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@id/maxMinTxt"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/feelsLikeTxt"
            tools:text="Feels like 25°"
            android:textSize="17sp"
            android:layout_below="@id/descriptionTxt"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:strokeWidth=".8dp"
            app:strokeColor="@android:color/darker_gray"
            android:layout_below="@id/feelsLikeTxt"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="20dp"
            app:cardElevation="0dp"
            app:cardCornerRadius="9dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/sunTimeLayout"
                    android:paddingStart="26dp"
                    android:paddingEnd="26dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="10dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sunrise"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:layout_gravity="center"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="6:00 am"
                            android:textSize="18sp"
                            android:id="@+id/sunriseTxt"
                            android:layout_gravity="center"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sunset"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:layout_gravity="center"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="5:00 pm"
                            android:textSize="18sp"
                            android:id="@+id/sunsetTxt"
                            android:layout_gravity="center"
                            />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:paddingStart="26dp"
                    android:paddingEnd="26dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginEnd="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/wind_speed"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:layout_gravity="center"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="13 Km/hr"
                            android:textSize="18sp"
                            android:id="@+id/windTxt"
                            android:layout_gravity="center"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/humidity"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:layout_gravity="center"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="59%"
                            android:textSize="18sp"
                            android:id="@+id/humidityTxt"
                            android:layout_gravity="center"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pressure"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:layout_gravity="center"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="1013"
                            android:textSize="18sp"
                            android:id="@+id/pressureTxt"
                            android:layout_gravity="center"
                            />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </RelativeLayout>

</ScrollView>